--- a/custom_components/go_musicfox_ha/translations/zh-Hans.json
+++ b/custom_components/go_musicfox_ha/translations/zh-Hans.json
@@ -32,7 +32,15 @@
         "name": "歌手"
       },
       "play_mode": {
-        "name": "播放模式"
+        "name": "播放模式",
+        "state": {
+          "ordered": "顺序播放",
+          "list_loop": "列表循环",
+          "single_loop": "单曲循环",
+          "list_random": "列表随机",
+          "inf_random": "无限随机",
+          "intelligent": "心动模式"
+        }
       },
       "lyric": {
         "name": "歌词"
